# previewBOT

./: .dockerignore  Cargo.toml  Containerfile  Dockerfile  README.md
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: build-arm64.yml  build-package.yml
docs/: privacy-policy.md  terms-of-service.md
src/: event_handler.rs  main.rs
src/bot/: event_handler.rs  mod.rs
src/bot/commands/: juxtapose.rs
src/bot/commands/juxtapose/: mod.rs  preview.rs  structure.rs
src/bot/file_preview/: gist.rs  github_repositoriy_file.rs  github_repository_file.rs  mod.rs
src/commands/: juxtapose.rs  mod.rs
src/event_handler/: mod.rs
src/event_handler/file_preview/: gist.rs  github_repositoriy_file.rs  mod.rs
src/file_preview/: gist.rs  mod.rs
src/web/: api_juxtapose_request.rs  api_juxtapose_response.rs  api_juxtapose_url_handler.rs  mod.rs  serve.rs
static/v1/: index.html  main.js  style.css
