[package]
name = "preview_bot"
version = "0.1.0"
license = "MPL-2.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.32"
axum = "0.8.6"
base64 = "0.22.1"
blake3 = "1.5.1"
constant_time_eq = "0.4.2"
dotenvy = "0.15.7"
httpdate = "1.0.3"
image = "0.25.8"
imageproc = "0.25.0"
once_cell = "1.19.0"
percent-encoding = "2.3.2"
redis = { version = "0.32.6", features = ["tokio-comp", "connection-manager"] }
regex = "1.11.3"
reqwest = { version = "0.12.23", default-features = false, features = [
    "json",
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
] }
serde = "1.0.228"
serde_json = "1.0.145"
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false, features = [
    "builder",
    "cache",
    "gateway",
    "model",
    "utils",
    "rustls_backend",
] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = "line-tables-only"
