[package]
name = "preview_bot"
version = "0.1.0"
license = "MPL-2.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.32"
axum = "0.8.7"
base64 = "0.22.1"
blake3 = "1.5.1"
constant_time_eq = "0.4.2"
dotenvy = "0.15.7"
httpdate = "1.0.3"
image = "0.25.9"
imageproc = "0.25.0"
once_cell = "1.19.0"
percent-encoding = "2.3.2"
redis = { version = "1.0.1", features = ["tokio-comp", "connection-manager"] }
regex = "1.12.2"
reqwest = { version = "0.12.25", default-features = false, features = [
    "json",
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
] }
serde = "1.0.228"
serde_json = "1.0.145"
# latest commit on next branch as of 2025-09-30
serenity = { git = "https://github.com/serenity-rs/serenity", rev = "7443ac1a64f064ea5c1c1ded0f50ee7f0fd116ee", default-features = false, features = [
    "builder",
    "cache",
    "gateway",
    "model",
    "utils",
    "rustls_backend",
] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = "line-tables-only"
