[package]
name = "preview_bot"
version = "0.1.0"
license = "MPL-2.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.32"
axum = "0.8.8"
base64 = "0.22.1"
blake3 = "1.8.3"
constant_time_eq = "0.4.2"
dotenvy = "0.15.7"
httpdate = "1.0.3"
image = "0.25.10"
imageproc = "0.26.1"
once_cell = "1.21.4"
percent-encoding = "2.3.2"
redis = { version = "1.0.5", features = ["tokio-comp", "connection-manager"] }
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "gzip", "brotli", "deflate"] }
serde = "1.0.228"
serde_json = "1.0.149"
# latest commit on next branch as of 2026-03-09
serenity = { git = "https://github.com/serenity-rs/serenity", rev = "ef40347b518d9489204da3b954fbf4d5104a9e9a", default-features = false, features = [
    "builder",
    "cache",
    "gateway",
    "model",
    "utils",
    "rustls_backend",
] }
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = "line-tables-only"
